# ai-crm

./: .gitignore  Caddyfile  MEMORY.md  README.md  docker-compose.yml  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_student_call_fields.py  0003_user_mobile.py  0004_sales_table.py  0005_gpa_and_messages.py  0006_sale_items_and_deposit.py  0007_installment_plans.py  0008_performance_indexes.py  0009_student_last_outcome.py  0010_loyalty.py  0011_loyalty_phase2.py
backend/sql/: schema.sql
backend/src/modules/ai_analysis/api/: routes.py
backend/src/modules/ai_analysis/application/: analyze_call.py  ports.py  run_pipeline.py
backend/src/modules/ai_analysis/domain/: models.py
backend/src/modules/ai_analysis/infrastructure/: models.py  repository.py
backend/src/modules/analytics/api/: routes.py
backend/src/shared/cache/: json_cache.py
backend/src/shared/config/: settings.py
backend/src/shared/db/: audit_model.py  base.py  redis_client.py
backend/src/shared/errors/: exceptions.py
backend/src/shared/export/: csv_stream.py
backend/src/shared/security/: audit.py  jwt.py  password.py  rate_limit.py
backend/src/shared/storage/: s3.py
backend/src/shared/utils/: jalali.py
backend/tests/: conftest.py  test_crm_schemas.py  test_loyalty_engine.py  test_loyalty_rewards.py  test_security.py  test_simotel_provider.py  test_workano_provider.py
(+114 files in other folders)
